[AT-SPI] accessibility/native-text-control-attributed-string.html is failing https://bugs.webkit.org/show_bug.cgi?id=237821

Reviewed by Carlos Garcia Campos.

Tools:

* WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
(WTR::AccessibilityUIElement::attributedStringForRange): Check the
validity of the passed range.

LayoutTests:

* platform/gtk/TestExpectations:
* platform/gtk/accessibility/native-text-control-attributed-string-expected.txt: Added.
* platform/wpe/TestExpectations:



Canonical link: https://commits.webkit.org/248963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292019 268f45cc-cd09-0410-ab3c-d52691b4dbfc